// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`do not show cartpopover 1`] = `
<div
  className="HiddenCss-mdUp-16"
>
  <div
    className="inject-CartPopover-with-uiStore-container-1 inject-CartPopover-with-uiStore-isContainerHidden-3"
  >
    <div
      className="MuiGrid-container-24 MuiGrid-spacing-xs-24-48 inject-CartPopover-with-uiStore-gridContainer-2"
    >
      <div
        className="MuiGrid-item-25 MuiGrid-grid-xs-12-64 inject-CartPopover-with-uiStore-containerItem-5"
      >
        <img
          alt="Item Title"
          className="inject-CartPopover-with-uiStore-addedToCartImg-6"
          src="//placehold.it/100"
        />
        <span
          className="MuiTypography-root-121 MuiTypography-body1-130 inject-CartPopover-with-uiStore-addedToCartText-8"
        >
          10
           "
          <span
            className="inject-CartPopover-with-uiStore-addedToCartItemName-7"
          >
            Item Title
          </span>
          " added to cart
        </span>
      </div>
      <div
        className="MuiGrid-item-25 MuiGrid-grid-xs-12-64"
      >
        <a
          className="WithTracking-Link--link-145"
          href="/checkout"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="link"
          tabIndex={0}
          tracking={
            Object {
              "getTrackingData": [Function],
              "trackEvent": [Function],
            }
          }
        >
          <div
            className="Button__ButtonDiv-bnfrK eloVkm"
            onClick={[Function]}
            onKeyPress={[Function]}
            role="button"
            tabIndex={0}
            title={undefined}
          >
            <div>
              Checkout
            </div>
            <div
              className="Button__SpinnerWrap-bgOcuM cCKgPo"
              style={
                Object {
                  "opacity": 0,
                  "paddingLeft": 0,
                  "width": 0,
                }
              }
            >
              <svg
                className="spinner__SpinnerSvg-iBTUvT bunzNs"
                height="40px"
                style={
                  Object {
                    "enableBackground": "new 0 0 50 50",
                  }
                }
                version="1.1"
                viewBox="0 0 50 50"
                width="40px"
                x="0px"
                y="0px"
              >
                <path
                  d="M43.935,25.145c0-10.318-8.364-18.683-18.683-18.683c-10.318,0-18.683,8.365-18.683,18.683h4.068c0-8.071,6.543-14.615,14.615-14.615c8.072,0,14.615,6.543,14.615,14.615H43.935z"
                  fill="#000"
                >
                  <animateTransform
                    attributeName="transform"
                    attributeType="xml"
                    dur="1s"
                    from="0 25 25"
                    repeatCount="indefinite"
                    to="360 25 25"
                    type="rotate"
                  />
                </path>
              </svg>
            </div>
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`show cartpopover 1`] = `
<div
  className="HiddenCss-mdUp-16"
>
  <div
    className="inject-CartPopover-with-uiStore-container-1 inject-CartPopover-with-uiStore-isContainerVisible-4"
  >
    <div
      className="MuiGrid-container-24 MuiGrid-spacing-xs-24-48 inject-CartPopover-with-uiStore-gridContainer-2"
    >
      <div
        className="MuiGrid-item-25 MuiGrid-grid-xs-12-64 inject-CartPopover-with-uiStore-containerItem-5"
      >
        <img
          alt="Item Title"
          className="inject-CartPopover-with-uiStore-addedToCartImg-6"
          src="//placehold.it/100"
        />
        <span
          className="MuiTypography-root-121 MuiTypography-body1-130 inject-CartPopover-with-uiStore-addedToCartText-8"
        >
          10
           "
          <span
            className="inject-CartPopover-with-uiStore-addedToCartItemName-7"
          >
            Item Title
          </span>
          " added to cart
        </span>
      </div>
      <div
        className="MuiGrid-item-25 MuiGrid-grid-xs-12-64"
      >
        <a
          className="WithTracking-Link--link-145"
          href="/checkout"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="link"
          tabIndex={0}
          tracking={
            Object {
              "getTrackingData": [Function],
              "trackEvent": [Function],
            }
          }
        >
          <div
            className="Button__ButtonDiv-bnfrK eloVkm"
            onClick={[Function]}
            onKeyPress={[Function]}
            role="button"
            tabIndex={0}
            title={undefined}
          >
            <div>
              Checkout
            </div>
            <div
              className="Button__SpinnerWrap-bgOcuM cCKgPo"
              style={
                Object {
                  "opacity": 0,
                  "paddingLeft": 0,
                  "width": 0,
                }
              }
            >
              <svg
                className="spinner__SpinnerSvg-iBTUvT bunzNs"
                height="40px"
                style={
                  Object {
                    "enableBackground": "new 0 0 50 50",
                  }
                }
                version="1.1"
                viewBox="0 0 50 50"
                width="40px"
                x="0px"
                y="0px"
              >
                <path
                  d="M43.935,25.145c0-10.318-8.364-18.683-18.683-18.683c-10.318,0-18.683,8.365-18.683,18.683h4.068c0-8.071,6.543-14.615,14.615-14.615c8.072,0,14.615,6.543,14.615,14.615H43.935z"
                  fill="#000"
                >
                  <animateTransform
                    attributeName="transform"
                    attributeType="xml"
                    dur="1s"
                    from="0 25 25"
                    repeatCount="indefinite"
                    to="360 25 25"
                    type="rotate"
                  />
                </path>
              </svg>
            </div>
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;
